--- a/pages/18457.html
+++ b/pages/18457.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -315,7 +315,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -653,30 +653,30 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The concept of <em><math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos</em> (<a href='#Lurie'>Lurie, appendix A</a>) is a version of the concept of <em><a class='existingWikiWord' href='/nlab/show/pretopos'>pretopos</a></em> as one passes from <a class='existingWikiWord' href='/nlab/show/topos'>toposes</a> to <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-toposes</a>. The definition is a variant of the characterization of <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-toposes</a>, via the <a href='infinity-topos#GiraudAxioms'>Giraud-Rezk-Lurie axioms</a>, asking only for <em>some <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-limits</a></em> and <em>for <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-colimits</a></em>.</p>
+<p>The concept of <em><math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos</em> (<a href='#Lurie'>Lurie, appendix A</a>) is a version of the concept of <em><a class='existingWikiWord' href='/nlab/show/pretopos'>pretopos</a></em> as one passes from <a class='existingWikiWord' href='/nlab/show/topos'>toposes</a> to <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-toposes</a>. The definition is a variant of the characterization of <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-toposes</a>, via the <a href='infinity-topos#GiraudAxioms'>Giraud-Rezk-Lurie axioms</a>, asking only for <em>some <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-limits</a></em> and <em>for <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-colimits</a></em>.</p>
 
 <h2 id='definition'>Definition</h2>
 
 <div class='num_defn' id='InfinityPreTopos'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a>. This is called an <em><math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos</em> is</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a>. This is called an <em><math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos</em> if</p>
 
 <ol>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/terminal+object+in+a+quasi-category'>terminal object</a> and <a class='existingWikiWord' href='/nlab/show/homotopy+pullback'>homotopy fiber products</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/terminal+object+in+a+quasi-category'>terminal object</a> and <a class='existingWikiWord' href='/nlab/show/homotopy+pullback'>homotopy fiber products</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> has <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-colimits</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> has <a class='existingWikiWord' href='/nlab/show/finite+%28infinity%2C1%29-limit'>finite (∞,1)-colimits</a>;</p>
 </li>
 
 <li>
-<p>finite <a class='existingWikiWord' href='/nlab/show/coproduct'>coproducts</a> in <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/universal+colimit'>universal</a> and <a class='existingWikiWord' href='/nlab/show/disjoint+coproduct'>disjoint</a>;</p>
+<p>finite <a class='existingWikiWord' href='/nlab/show/coproduct'>coproducts</a> in <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/universal+colimit'>universal</a> and <a class='existingWikiWord' href='/nlab/show/disjoint+coproduct'>disjoint</a>;</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/groupoid+object+in+an+%28infinity%2C1%29-category'>groupoid objects</a> in <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are effective:</p>
+<p><a class='existingWikiWord' href='/nlab/show/groupoid+object+in+an+%28infinity%2C1%29-category'>groupoid objects</a> in <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are effective:</p>
 </li>
 
 <li>
@@ -684,7 +684,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>If these conditions hold except possibly for the existence of a <a class='existingWikiWord' href='/nlab/show/terminal+object+in+a+quasi-category'>terminal object</a>, then <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is a <em>local <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos.</em></p>
+<p>If these conditions hold except possibly for the existence of a <a class='existingWikiWord' href='/nlab/show/terminal+object+in+a+quasi-category'>terminal object</a>, then <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is a <em>local <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos.</em></p>
 </div>
 
 <p><a href='#Lurie'>Lurie, def. A:6.1.1</a></p>
@@ -694,7 +694,7 @@ margin-left: 0em;
 <div class='num_example'>
 <h6 id='example'>Example</h6>
 
-<p>Every <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-topos</a> is an <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos (def. <a class='maruku-ref' href='#InfinityPreTopos'>1</a>).</p>
+<p>Every <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-topos</a> is an <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos (def. <a class='maruku-ref' href='#InfinityPreTopos'>1</a>).</p>
 </div>
 
 <p>(<a href='#Lurie'>Lurie, example A.6.1.5</a>)</p>
@@ -702,14 +702,14 @@ margin-left: 0em;
 <div class='num_example'>
 <h6 id='example_2'>Example</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-topos</a> then the <a class='existingWikiWord' href='/nlab/show/sub-%28infinity%2C1%29-category'>full sub-(∞,1)-category</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mi>coh</mi></msub><mo>↪</mo><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>Grothendieck (∞,1)-topos</a> then the <a class='existingWikiWord' href='/nlab/show/sub-%28infinity%2C1%29-category'>full sub-(∞,1)-category</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mi>coh</mi></msub><mo>↪</mo><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>
   \mathbf{H}_{coh} \hookrightarrow \mathbf{H}
 
 </annotation></semantics></math></div>
-<p>on the <a class='existingWikiWord' href='/nlab/show/coherent+object'>coherent objects</a> is a local <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos (def. <a class='maruku-ref' href='#InfinityPreTopos'>1</a>).</p>
+<p>on the <a class='existingWikiWord' href='/nlab/show/coherent+object'>coherent objects</a> is a local <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos (def. <a class='maruku-ref' href='#InfinityPreTopos'>1</a>).</p>
 
-<p>If moreover <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/coherent+%28infinity%2C1%29-topos'>coherent (∞,1)-topos</a>, then <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mi>coh</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{H}_{coh}</annotation></semantics></math> is an <math class='maruku-mathml' display='inline' id='mathml_7b334be31728cfb3fda457a4cfb9f4070524a42b_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos.</p>
+<p>If moreover <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/coherent+%28infinity%2C1%29-topos'>coherent (∞,1)-topos</a>, then <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mi>coh</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{H}_{coh}</annotation></semantics></math> is an <math class='maruku-mathml' display='inline' id='mathml_7e5da554a77e3b9c3a5c3d603ca97319ea17d433_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-pretopos.</p>
 </div>
 
 <p>(<a href='#Lurie'>Lurie, prop. A.6.1.6, cor. 6.1.7</a>)</p>
@@ -728,14 +728,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on July 13, 2017 10:46:07 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  Revised on January 29, 2018 09:50:25 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%28infinity%2C1%29-pretopos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/%28infinity%2C1%29-pretopos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28infinity%2C1%29-pretopos/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/%28infinity%2C1%29-pretopos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28infinity%2C1%29-pretopos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
