--- a/pages/487.html
+++ b/pages/487.html
@@ -474,15 +474,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Some algebraic categories, such as <a class='existingWikiWord' href='/nlab/show/Grp'>the category of groups</a>, are balanced.</p>
+<p>Some algebraic categories, such as <a class='existingWikiWord' href='/nlab/show/Grp'>the category of groups</a> (see <a href='https://ncatlab.org/nlab/show/regular+monomorphism#Examples'>here</a> and <a href='https://ncatlab.org/nlab/show/Grp#eq'>here</a>), are balanced.</p>
 </li>
 
 <li>
-<p>Any <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> is balanced.</p>
+<p>Any <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> is balanced. An <a class='existingWikiWord' href='/nlab/show/additive+category'>additive category</a> need not be; for example in the category of <span class='newWikiWord'>torsionfree abelian groups<a href='/nlab/new/torsionfree+abelian+groups'>?</a></span>, each nonzero homomorphism <math class='maruku-mathml' display='inline' id='mathml_e373983ce97b77d7026b17550eebebe74efdbac3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo>→</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z} \to \mathbb{Z}</annotation></semantics></math> is both monic and epic.</p>
 </li>
 
 <li>
-<p>The category of rings is not balanced; <math class='maruku-mathml' display='inline' id='mathml_e1c922cb5eb93c04d6d12df5403c29be8f97a2d6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi><mo>↪</mo><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Z\hookrightarrow Q</annotation></semantics></math> is monic and epic but not an isomorphism.</p>
+<p>The category of rings is not balanced; <math class='maruku-mathml' display='inline' id='mathml_e373983ce97b77d7026b17550eebebe74efdbac3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi><mo>↪</mo><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Z\hookrightarrow Q</annotation></semantics></math> is monic and epic but not an isomorphism. On similar grounds, the category of commutative monoids is not balanced, as the inclusion <math class='maruku-mathml' display='inline' id='mathml_e373983ce97b77d7026b17550eebebe74efdbac3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi><mo>↪</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N} \hookrightarrow \mathbb{Z}</annotation></semantics></math> is both monic and epic.</p>
 </li>
 
 <li>
@@ -499,14 +499,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  7, 2014 10:14:53 
-  by <a class="existingWikiWord" href="/nlab/show/Ingo+Blechschmidt">Ingo Blechschmidt</a>
-  (137.250.162.16)
+  Revised on January 29, 2018 10:46:36 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/balanced+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/balanced+category/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/balanced+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/balanced+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/balanced+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/balanced+category/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/balanced+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/balanced+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
