--- a/pages/6772.html
+++ b/pages/6772.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,14 +308,158 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The Euler beta function has been defined by <a class='existingWikiWord' href='/nlab/show/Leonhard+Euler'>Euler</a> around 1730 by the so called Euler beta integral</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7ee12370eccaaaeba798cf93e6899b291f55c4da_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>=</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>1</mn></msubsup><msup><mi>t</mi> <mrow><mi>x</mi><mo>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mn>1</mn><mo>−</mo><mi>t</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>y</mi><mo>−</mo><mn>1</mn></mrow></msup><mi>d</mi><mi>t</mi><mo>=</mo><mfrac><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>Γ</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>,</mo><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>Re</mi><mi>x</mi><mo>&gt;</mo><mn>0</mn><mo>,</mo><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>Re</mi><mi>y</mi><mo>&gt;</mo><mn>0</mn><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+    <blockquote>
+<p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a>. For the <a class='existingWikiWord' href='/nlab/show/beta+function'>beta function</a> related to <a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a> see there.</p>
+</blockquote>
+
+<div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='arithmetic'>Arithmetic</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/number+theory'>number theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/arithmetic+topology'>arithmetic topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+dimensional+arithmetic+geometry'>higher arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+geometry'>E-∞ arithmetic geometry</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/number'>number</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, <a class='existingWikiWord' href='/nlab/show/integer'>integer number</a>, <a class='existingWikiWord' href='/nlab/show/rational+number'>rational number</a>, <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a>, <a class='existingWikiWord' href='/nlab/show/irrational+number'>irrational number</a>, <a class='existingWikiWord' href='/nlab/show/complex+number'>complex number</a>, <a class='existingWikiWord' href='/nlab/show/quaternion'>quaternion</a>, <a class='existingWikiWord' href='/nlab/show/octonion'>octonion</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>adic number</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+number'>cardinal number</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+number'>ordinal number</a>, <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal number</a></li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peano+arithmetic'>Peano arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/second-order+arithmetic'>second-order arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/transfinite+arithmetic'>transfinite arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+arithmetic'>cardinal arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+arithmetic'>ordinal arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/prime+field'>prime field</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+integer'>p-adic integer</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic rational number</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+complex+number'>p-adic complex number</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a></strong>, <a class='existingWikiWord' href='/nlab/show/function+field+analogy'>function field analogy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+scheme'>arithmetic scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+curve'>arithmetic curve</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+genus'>arithmetic genus</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chern-Simons+theory'>arithmetic Chern-Simons theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chow+group'>arithmetic Chow group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil-%C3%A9tale+topology+for+arithmetic+schemes'>Weil-étale topology for arithmetic schemes</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/absolute+cohomology'>absolute cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil+conjecture+on+Tamagawa+numbers'>Weil conjecture on Tamagawa numbers</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Borger%27s+absolute+geometry'>Borger&#39;s absolute geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Iwasawa-Tate+theory'>Iwasawa-Tate theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/arithmetic+jet+space'>arithmetic jet space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adelic+integral'>adelic integration</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/shtuka'>shtuka</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Frobenioid'>Frobenioid</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Arakelov+geometry'>Arakelov geometry</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Riemann-Roch+theorem'>arithmetic Riemann-Roch theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/differential+algebraic+K-theory'>differential algebraic K-theory</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The Euler beta function has been defined by <a class='existingWikiWord' href='/nlab/show/Leonhard+Euler'>Euler</a> around 1730 by the so called Euler beta integral</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8d3bab6e7d3e534512715bee0eee2dbacd44ae33_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>=</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>1</mn></msubsup><msup><mi>t</mi> <mrow><mi>x</mi><mo>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mn>1</mn><mo>−</mo><mi>t</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>y</mi><mo>−</mo><mn>1</mn></mrow></msup><mi>d</mi><mi>t</mi><mo>=</mo><mfrac><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mi>Γ</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>,</mo><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>Re</mi><mi>x</mi><mo>&gt;</mo><mn>0</mn><mo>,</mo><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>Re</mi><mi>y</mi><mo>&gt;</mo><mn>0</mn><mo>,</mo></mrow><annotation encoding='application/x-tex'>
 B(x,y) = \int_0^1 t^{x-1} (1-t)^{y-1} d t = \frac{\Gamma(x)\Gamma(y)}{\Gamma(x+y)},\,\,\,\,\,\,Re x\gt 0, \,\,\,\,Re y \gt 0,
 
 </annotation></semantics></math></div>
 <p>which can be expressed in terms of the gamma function as stated.</p>
 
 <p>A multidimensional generalization is the <a class='existingWikiWord' href='/nlab/show/Selberg+integral'>Selberg integral</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gamma+function'>Gamma function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/factorial'>factorial</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
 
 <ul>
 <li>G. E. Andrews, R. Askey, R. Roy, <em>Special functions</em>, Enc. of Math. and its Appl. <strong>71</strong>, Cambridge Univ. Press 1999 
@@ -325,14 +469,14 @@ B(x,y) = \int_0^1 t^{x-1} (1-t)^{y-1} d t = \frac{\Gamma(x)\Gamma(y)}{\Gamma(x+y
 </div>
 
 <div class="revisedby">
-  Revised on October 10, 2011 20:50:58 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  Revised on January 29, 2018 14:50:56 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (62.168.44.102)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euler+beta+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euler+beta+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Euler+beta+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euler+beta+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euler+beta+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euler+beta+function/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Euler+beta+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euler+beta+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
